<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_bg"
    android:backgroundTint="@color/main_background"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewLabelMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bottom_filter_options"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imButFilterClose"
        app:layout_constraintEnd_toStartOf="@+id/buttonDone"
        app:layout_constraintStart_toEndOf="@+id/imButFilterClose"
        app:layout_constraintTop_toTopOf="@+id/imButFilterClose" />

    <Button
        android:id="@+id/buttonDone"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:backgroundTint="@color/button_see_more"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:text="@string/button_done"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imButFilterClose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imButFilterClose"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textViewBrandLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:paddingTop="16dp"
        android:text="@string/bottom_filter_category_brand"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/spinnerBrands"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabelMain" />

    <Spinner
        android:id="@+id/spinnerBrands"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:entries="@array/brands"
        android:paddingTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBrandLabel"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textViewPriceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/bottom_filter_category_price"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerBrands" />

    <Spinner
        android:id="@+id/spinnerPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:entries="@array/prices"
        android:paddingTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPriceLabel" />

    <TextView
        android:id="@+id/textViewSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/bottom_filter_category_size"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerPrice" />

    <Spinner
        android:id="@+id/spinnerSize"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:entries="@array/sizes"
        android:paddingTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSize" />

    <ImageButton
        android:id="@+id/imButFilterClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/main_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_button_close" />
</androidx.constraintlayout.widget.ConstraintLayout>